API type changes
