# server/openapi.yml
@@ -381,7 +381,7 @@ paths:
               schema:
                 properties:
                   posts:
-                    $ref: "#/components/schemas/TimelinePostResponse"
+                    $ref: "#/components/schemas/UserPostEntry"
                   latest_post_time:
                     type: string
                     format: date-time
@@ -549,21 +549,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/UserInfoResponse"
-    TimelinePostResponse:
-      properties:
-        id:
-          type: string
-          format: uuid
-          description: The ID of the post.
-        author:
-          $ref: "#/components/schemas/UserPostEntryAuthor"
-        content:
-          type: string
-        created_at:
-          type: string
-          format: date-time
-        privacy:
-          $ref: "#/components/schemas/PrivacyType"
     PostResultResponse:
       properties:
         id:
